<?xml version="1.0"?>
<package format="2">
  <name>lex_common_msgs</name>
  <version>1.0.0</version>
  <description>Common messages for interacting with Amazon Lex using the lex_node package</description>
  <url>http://wiki.ros.org/lex_common_msgs</url>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>audio_common_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
