<?xml version="1.0"?>
<package format="2">
  <name>lex_node</name>
  <version>2.0.0</version>
  <description>Package providing a ROS node for interacting with Amazon Lex</description>
  <url>http://wiki.ros.org/lex_node</url>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>lex_common_msgs</depend>
  <depend>aws_common</depend>
  <depend>aws_ros1_common</depend>
  <test_depend>rostest</test_depend>
</package>
